name:                proxy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Julian Fell
maintainer:          example@example.com
copyright:           2017 Julian Fell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Types
                     , PrettyPrinter
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
  default-language:    Haskell2010

executable proxy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , bytestring
                     , attoparsec
                     , proxy
  default-language:    Haskell2010

test-suite proxy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , proxy
                     , HUnit
                     , bytestring
                     , attoparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/proxy
